--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,78 @@
+
+/*Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:ital,wght@0,300;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+/*CSS Reset*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+/*Global Variables*/
+:root {
+    --sideBGColor: #040b14;
+    --themeColor: #00A78E;
+    --iconBGColor: #2C2F3F;
+    --textColor: #525252;
+    --bgColor: #F7F7F7;
+}
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-#header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
+header {
+    height: 100vh;
     width: 300px;
-    transition: all ease-in-out 0.5s;
-    z-index: 9997;
-    transition: all 0.5s;
-    padding: 0 15px;
-    background: #040b14;
-    overflow-y: auto;
-  }
-  
+    padding: 15px 30px;
+    background-color: var(--sideBGColor);
+    overflow: auto;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    transition: 0.4s;
+    z-index: 99;
+}
+
+
+header .profile {
+    text-align: center;
+    margin: 10px 0;
+}
+
+
+header .profile img {
+    width: 150px;
+    border-radius: 50%;
+    border: 10px solid var(--iconBGColor);
+
+}
+
+header .profile h1 {
+    color: var(--bgColor);
+    font-size: 25px;
+    font-weight: 600;
+}
+
+
+header .profile .social-icons a {
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    text-align: center;
+    color: var(--bgColor);
+    background-color: var(--textColor);
+    line-height: 37px;
+    font-size: 18px;
+    margin: 1.5px;
+    transition: 0.4s;
+}
+
+header .profile .social-icons a:hover {
+    background-color: var(--themeColor);
+}
