--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
-
-/*Google Fonts*/
+/*--------------------------------------------------------------
+# Google Fonts*
+--------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:ital,wght@0,300;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-/*CSS Reset*/
+/*--------------------------------------------------------------
+# CSS Reset
+--------------------------------------------------------------*/
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +14,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
-/*Global Variables*/
+
+/*--------------------------------------------------------------
+# Global Variables
+--------------------------------------------------------------*/
 :root {
     --sideBGColor: #040b14;
     --themeColor: #00A78E;
@@ -19,7 +25,6 @@
     --textColor: #525252;
     --bgColor: #F7F7F7;
 }
-
 
 /*--------------------------------------------------------------
 # Header
@@ -59,7 +64,7 @@ header .profile h1 {
 }
 
 
-header .profile .social-links a {
+header .profile .social-icons a {
     display: inline-block;
     width: 36px;
     height: 36px;
@@ -73,14 +78,11 @@ header .profile .social-links a {
     transition: 0.4s;
 }
 
-header .profile .social-links a:hover {
+header .profile .social-icons a:hover {
     background-color: var(--themeColor);
 }
 
 
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
 header nav {
     margin-top: 30px;
 }
@@ -108,3 +110,101 @@ header nav ul li a:hover {
 header nav ul li .active {
     color: var(--themeColor);
 }
+
+/*--------------------------------------------------------------
+# Mobile Nav Toggle
+--------------------------------------------------------------*/
+#MenuBtn {
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    color: var(--bgColor);
+    background-color: var(--themeColor);
+    text-align: center;
+    line-height: 42px;
+    border-radius: 50%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 20%);
+    z-index: 999;
+    display: none;
+}
+
+/*Mobile View*/
+@media only screen and (max-width: 1050px) {
+    header {
+        left: -300px;
+    }
+
+    #MenuBtn {
+        display: block;
+    }
+
+}
+
+/*Header Toggle*/
+.mobile-nav-active header {
+    left: 0;
+}
+
+
+/*--------------------------------------------------------------
+# Home Section
+--------------------------------------------------------------*/
+#home {
+    height: 100vh;
+    width: 100%;
+    background-image: url(/assets/img/hero.jpg);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px;
+    position: relative;
+
+}
+
+.home-row {
+    z-index: 1;
+
+}
+
+.home-row h1 {
+    font-size: 50px;
+    color: var(--bgColor);
+    letter-spacing: -1px;
+    margin-top: 60px;
+    line-height: 60px;
+    font-weight: 600;
+}
+
+
+.home-row h1 span {
+    color: var(--themeColor);
+}
+
+.home-row p {
+    color: var(--bgColor);
+    font-size: 30px;
+    font-weight: 500;
+}
+
+
+.home-row p span {
+    border-bottom: 4px solid var(--themeColor);
+}
+
+@media (width: 1024px) {
+    #home {
+      background-attachment: fixed;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    #home h1 {
+      font-size: 28px;
+      line-height: 36px;
+    }
+  
+  }
