--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ header nav ul li .active {
     display: none;
 }
 
-/*Mobile View*/
+
 @media only screen and (max-width: 1050px) {
     header {
         left: -300px;
@@ -143,7 +143,8 @@ header nav ul li .active {
 
 }
 
-/*Header Toggle*/
+
+
 .mobile-nav-active header {
     left: 0;
 }
@@ -171,7 +172,7 @@ main {
 #home {
     height: 100vh;
     width: 100%;
-    background-image: url(/assets/img/hero.jpg);
+    background-image: url(/assets/img/wallpaper.jpg);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -181,16 +182,12 @@ main {
 
 }
 
-.home-row {
-    z-index: 1;
-
-}
 
 .home-row h1 {
-    font-size: 50px;
+    font-size: 40px;
     color: var(--bgColor);
     letter-spacing: -1px;
-    margin-top: 60px;
+    margin-top:-50px;
     line-height: 60px;
     font-weight: 600;
 }
@@ -211,7 +208,7 @@ main {
     border-bottom: 4px solid var(--themeColor);
 }
 
-@media (width: 1024px) {
+@media (min-width: 1024px) {
     #home {
       background-attachment: fixed;
     }
@@ -224,3 +221,164 @@ main {
     }
   
   }
+
+
+/*--------------------------------------------------------------
+# Global Tittle Section
+--------------------------------------------------------------*/
+
+  .title{
+    color: var(--bgColor);
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.divider {
+    width: 80px;
+    height: 4px;
+    background-color: var(--themeColor);
+    border-radius: 3px;
+}
+
+
+
+/*--------------------------------------------------------------
+# About Section
+--------------------------------------------------------------*/
+#about {
+    padding: 70px 30px;
+}
+
+
+#about .divider~p {
+    color: var(--bgColor);
+    font-size: 15px;
+    letter-spacing: 0.4px;
+    font-weight: 400;
+    margin-top: 15px;
+
+}
+
+#about .about-col {
+    display: flex;
+    gap: 20px;
+    margin-top: 25px;
+}
+
+#about .about-col .img-col {
+    flex-basis: 35%;
+    text-align: center;
+}
+
+#about .about-col .img-col img {
+    width: 100%;
+}
+
+#about .about-col .info-col {
+    flex-basis: 70%;
+}
+
+#about .about-col .info-col h2 {
+    color: var(--themeColor);
+    font-weight: 700;
+    font-size: 35px;
+    letter-spacing: 0.5px;
+    margin-top: -10px;
+}
+
+#about .about-col .info-col p {
+    color: var(--bgColor);
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    font-style: italic;
+}
+
+#about .about-col .info-col .icon-list-col {
+    display: flex;
+    margin-top: 20px;
+    gap: 40px;
+}
+
+
+#about .about-col .info-col .icon-list-col ul li {
+    list-style: none;
+    margin: 0 15px;
+}
+
+#about .about-col .info-col .icon-list-col ul li i {
+    margin: 5px;
+    color: var(--themeColor);
+}
+
+#about .about-col .info-col .icon-list-col ul li strong {
+    color: var(--bgColor);
+    font-weight: 500;
+    margin: 2px;
+}
+
+#about .about-col .info-col .icon-list-col ul li span {
+    color: var(--bgColor);
+    font-weight: 500;
+}
+ .pro-icon i {
+    font-size: 12px;
+    margin: 13px;
+    padding: 5px;
+}
+
+
+
+@media screen and (max-width:830px) {
+    #about {
+        padding: 50px 10px;
+    }
+
+    #about .divider~p {
+        font-size: 14px;
+        letter-spacing: 0px;
+        text-align: justify;
+    }
+
+    #about .about-col {
+        flex-direction: column;
+    }
+
+    #about .about-col .img-col img {
+        width: 50%;
+    }
+
+    #about .about-col .info-col h2 {
+        font-size: 14px;
+        letter-spacing: 0px;
+    }
+
+    #about .about-col .info-col .icon-list-col {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    #about .about-col .info-col .icon-list-col ul li {
+        margin: 10px 0;
+    }
+
+    #about .about-col .info-col .icon-list-col ul li strong {
+        font-weight: 500;
+        margin-right: 0px;
+    }
+
+    #about .about-col .info-col .icon-list-col ul li span {
+        font-weight: 400;
+        font-size: 13px
+    }
+
+}
+
+@media screen and (max-width:400px) {
+
+    #about .about-col .img-col img {
+        width: 90%;
+    }
+
+}
+
