--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,3 +449,17 @@ main {
   color: var(--themeColor);
 }
 
+/*Mobile view*/
+@media screen and (max-width: 820px){
+    #resume{
+        padding: 50px 15px;
+    }
+    #resume .resume-row{
+        flex-direction: column;
+    }
+
+    #resume .resume-row .resume-cols{
+        flex-basis: 100%;
+    }
+}
+
