--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,12 +320,6 @@ main {
     color: var(--bgColor);
     font-weight: 500;
 }
- .pro-icon i {
-    font-size: 12px;
-    margin: 13px;
-    padding: 5px;
-}
-
 
 
 @media screen and (max-width:830px) {
@@ -517,4 +511,97 @@ main {
     #skill{
         flex-basis: 50%;
     }
+}
+
+
+
+/*--------------------------------------------------------------
+# Project Section
+--------------------------------------------------------------*/
+
+#project {
+    padding: 70px 30px;
+}
+
+
+#project p{
+   color: var(--bgColor);
+   font-size: 15px;
+   letter-spacing: 0.4px;
+   font-weight: 400;
+   margin-top: 15px;
+    
+}
+
+#project .pro-row {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 35px;
+}
+
+
+#project .pro-row .pro-item {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 20%);
+}
+
+
+#project .pro-row .pro-item .pro-img img{
+    width: 100%;
+    border-radius: 10px;
+   
+}
+
+
+#project .pro-row .pro-item .pro-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 96%;
+    background-color: var(--themeColor);
+    padding: 0 15px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    transform: scale(0);
+    transition: 0.7s;
+    border-radius: 10px;
+    visibility: hidden;
+    
+}
+
+#project .pro-row .pro-item:hover .pro-info{
+    transform: scale(1);
+    visibility: visible;
+}
+
+
+#project .pro-row .pro-item .pro-info h4{
+    color: var(--bgColor);
+    font-size: 25px;
+    font-weight: 600;
+   
+}
+
+#project .pro-row .pro-item .pro-info h4 p{
+    color: var(--bgColor);
+    font-size: 14px;
+}
+
+#project .pro-row .pro-item .pro-info a{
+    color: var(--bgColor);
+    transition: 0.7s;
+
+}
+
+#project .pro-row .pro-item .pro-info  a:hover{
+    color: var(--sideBGColor);
+    transition: 0.4s;
 }
